application_2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-app2
  namespace: app2namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /myPodInfo
        backend:
          serviceName: app2
          servicePort: 8001

      - path: /
        backend:
          serviceName: app2
          servicePort: 8001
